Added x+1 for all zero values in maternal_mortality_rate, Added life_exp_residuals column to identify efficiency

--- a/notebooks/01_data_collection.ipynb
+++ b/notebooks/01_data_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "id": "0b36af12",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "id": "52a8c216",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "id": "1208ed78",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "9      ARG         2000                    77.0                  70.1"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "id": "b44b1d0d",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "id": "aeaf6328",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "       'LVA', 'ALB'], dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "id": "6ffece4f",
    "metadata": {},
    "outputs": [
@@ -668,7 +668,7 @@
        "[10 rows x 46 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "id": "3504fba4",
    "metadata": {},
    "outputs": [
@@ -787,7 +787,7 @@
        "Name: TIME_PERIOD, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "id": "6b5271ac",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "id": "037224e8",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1124,7 @@
        "9     INM           11.4         MATM            34.9  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "id": "cd2f7ca9",
    "metadata": {},
    "outputs": [
@@ -1402,7 +1402,7 @@
        "9                     34.9  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 73,
    "id": "3ce64377",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 74,
    "id": "c26dd6d6",
    "metadata": {},
    "outputs": [
@@ -1486,47 +1486,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "id": "d2c34e01",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "(1199, 12)\n",
-      "Country                            0\n",
-      "Year                               0\n",
-      "Life_Expectancy_Female             0\n",
-      "Life_Expectancy_Male               0\n",
-      "UNIT_MEASURE                       0\n",
-      "Healthcare_Spending_Percent_GDP    0\n",
-      "UNIT_MEASURE_per_capita            0\n",
-      "Healthcare_Spending_Per_Capita     0\n",
-      "MEASURE                            0\n",
-      "Infant_Mortality_Rate              0\n",
-      "MEASURE_MATM                       0\n",
-      "Maternal_Mortality_Rate            0\n",
-      "dtype: int64\n",
-      "count    43.000000\n",
-      "mean     27.883721\n",
-      "std       6.230529\n",
-      "min      11.000000\n",
-      "25%      22.000000\n",
-      "50%      31.000000\n",
-      "75%      33.000000\n",
-      "max      34.000000\n",
-      "Name: Year, dtype: float64\n",
-      "count    34.000000\n",
-      "mean     35.264706\n",
-      "std       7.341492\n",
-      "min      23.000000\n",
-      "25%      27.250000\n",
-      "50%      39.000000\n",
-      "75%      42.000000\n",
-      "max      43.000000\n",
-      "Name: Country, dtype: float64\n"
+     "ename": "KeyError",
+     "evalue": "Index(['Year'], dtype='object')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[32m/var/folders/2d/lvkbllz16tx46w46hjkg1gdw0000gn/T/ipykernel_94411/557614061.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m      1\u001b[39m ml_df.isnull().sum()\n\u001b[32m      2\u001b[39m \n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# checking for duplicate rows\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m print(clean_ml_df.duplicated([\u001b[33m'Country'\u001b[39m, \u001b[33m'Year'\u001b[39m]).sum())\n\u001b[32m      5\u001b[39m \n\u001b[32m      6\u001b[39m \u001b[38;5;66;03m# removing duplicate rows\u001b[39;00m\n\u001b[32m      7\u001b[39m ml_df = ml_df.drop_duplicates(subset=[\u001b[33m'Country'\u001b[39m, \u001b[33m'Year'\u001b[39m])\n",
+      "\u001b[32m~/Desktop/machine_learning_projects/healthcare_analysis/healthcare-efficiency-analysis/healthcare-env/lib/python3.13/site-packages/pandas/core/frame.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, subset, keep)\u001b[39m\n\u001b[32m   6968\u001b[39m         \u001b[38;5;66;03m# Otherwise, raise a KeyError, same as if you try to __getitem__ with a\u001b[39;00m\n\u001b[32m   6969\u001b[39m         \u001b[38;5;66;03m# key that doesn't exist.\u001b[39;00m\n\u001b[32m   6970\u001b[39m         diff = set(subset) - set(self.columns)\n\u001b[32m   6971\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m diff:\n\u001b[32m-> \u001b[39m\u001b[32m6972\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m KeyError(Index(diff))\n\u001b[32m   6973\u001b[39m \n\u001b[32m   6974\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m len(subset) == \u001b[32m1\u001b[39m \u001b[38;5;28;01mand\u001b[39;00m self.columns.is_unique:\n\u001b[32m   6975\u001b[39m             \u001b[38;5;66;03m# GH#45236 This is faster than get_group_index below\u001b[39;00m\n",
+      "\u001b[31mKeyError\u001b[39m: Index(['Year'], dtype='object')"
      ]
     }
    ],
@@ -1554,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "54856667",
    "metadata": {},
    "outputs": [
@@ -1599,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "898ee470",
    "metadata": {},
    "outputs": [
@@ -1634,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "186acdcd",
    "metadata": {},
    "outputs": [
@@ -1690,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "feda0c07",
    "metadata": {},
    "outputs": [
@@ -1920,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "5887ecfd",
    "metadata": {},
    "outputs": [
@@ -2000,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "a8d290bc",
    "metadata": {},
    "outputs": [
@@ -2080,14 +2053,14 @@
     {
      "data": {
       "text/plain": [
-       "Healthcare_Spending_Per_Capita       0\n",
-       "Healthcare_Spending_Percent_GDP      0\n",
-       "Infant_Mortality_Rate                0\n",
-       "Maternal_Mortality_Rate            108\n",
+       "Healthcare_Spending_Per_Capita     0\n",
+       "Healthcare_Spending_Percent_GDP    0\n",
+       "Infant_Mortality_Rate              0\n",
+       "Maternal_Mortality_Rate            0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2096,8 +2069,138 @@
     "# checking for zero values in skewed columns\n",
     "(ml_df[skewed_columns] == 0).sum()\n",
     "\n",
-    "# need to remove zero values before clustering!!"
+    "# adding 1 to all values in maternal_mortality_rate to avoid log(0)\n",
+    "ml_df['Maternal_Mortality_Rate'] = ml_df['Maternal_Mortality_Rate'] + 1\n",
+    "\n",
+    "#double checking for zero values in skewed columns\n",
+    "(ml_df[skewed_columns] == 0).sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "774d2caf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most Efficient Countries:\n",
+      "      Country  Spending_Efficiency\n",
+      "2811     PER           274.403220\n",
+      "2812     PER           254.350828\n",
+      "2813     PER           231.367361\n",
+      "2814     PER           216.661234\n",
+      "2815     PER           210.518010\n",
+      "2817     PER           192.902723\n",
+      "2447     MEX           188.378887\n",
+      "2819     PER           187.261257\n",
+      "614      COL           186.537618\n",
+      "2449     MEX           184.527824\n",
+      "Most Inefficient Countries:\n",
+      "      Country  Spending_Efficiency\n",
+      "3503     USA             9.932216\n",
+      "3499     USA            11.025028\n",
+      "3495     USA            11.285876\n",
+      "3491     USA            13.744425\n",
+      "3487     USA            14.028330\n",
+      "3483     USA            14.388745\n",
+      "2708     NOR            14.642499\n",
+      "3479     USA            14.797283\n",
+      "898      DEU            14.848260\n",
+      "900      DEU            14.980507\n",
+      "<bound method NDFrame.head of      Country  Life_Expectancy_Female  Life_Expectancy_Male\n",
+      "2811     PER                    75.9                  71.1\n",
+      "2812     PER                    76.3                  71.4\n",
+      "2813     PER                    76.6                  71.7\n",
+      "2814     PER                    76.9                  72.0\n",
+      "2815     PER                    77.2                  72.2\n",
+      "2817     PER                    77.5                  72.5\n",
+      "2819     PER                    77.8                  72.7\n",
+      "2821     PER                    78.5                  73.2\n",
+      "2823     PER                    79.0                  73.6\n",
+      "2825     PER                    79.3                  73.8\n",
+      "2827     PER                    79.7                  74.3>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating new efficiency feature\n",
+    "clean_ml_df[\"Spending_Efficiency\"] = (clean_ml_df[\"Life_Expectancy_Female\"] + clean_ml_df[\"Life_Expectancy_Male\"]) / 2 / (clean_ml_df[\"Healthcare_Spending_Per_Capita\"] / 1000)\n",
+    "\n",
+    "# checking for most efficient and inefficient countries\n",
+    "most_efficient = clean_ml_df.sort_values(by=\"Spending_Efficiency\", ascending=False).head(10)\n",
+    "most_inefficient = clean_ml_df.sort_values(by=\"Spending_Efficiency\", ascending=True).head(10)\n",
+    "\n",
+    "print(\"Most Efficient Countries:\\n\", most_efficient[['Country', 'Spending_Efficiency']])\n",
+    "print(\"Most Inefficient Countries:\\n\", most_inefficient[['Country', 'Spending_Efficiency']])\n",
+    "\n",
+    "#checking actual value of life expectancy for Peru\n",
+    "peru_data = clean_ml_df[clean_ml_df['Country'] == 'PER']\n",
+    "print(peru_data[['Country', 'Life_Expectancy_Female', 'Life_Expectancy_Male']].head)\n",
+    "\n",
+    "\n",
+    "# Peru not really that efficient in terms of life expectancy, they are just not spending much money on healthcare"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62ae4654",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country\n",
+      "CRI    3.677306\n",
+      "ISR    3.470281\n",
+      "JPN    3.418143\n",
+      "KOR    3.176454\n",
+      "ESP    2.841935\n",
+      "Name: Life_Exp_Residual, dtype: float64\n",
+      "Country\n",
+      "USA   -6.402420\n",
+      "LTU   -3.285161\n",
+      "LVA   -3.223903\n",
+      "HUN   -3.198409\n",
+      "BGR   -2.501299\n",
+      "Name: Life_Exp_Residual, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# building a linear regression model to predict life expectancy based on healthcare spending per capita\n",
+    "spending_efficiency_model = LinearRegression()\n",
+    "X = clean_ml_df[['Healthcare_Spending_Per_Capita']]\n",
+    "y = (clean_ml_df['Life_Expectancy_Female'] + clean_ml_df['Life_Expectancy_Male']) / 2\n",
+    "spending_efficiency_model.fit(X, y)\n",
+    "predicted_life_expectancy = spending_efficiency_model.predict(X)\n",
+    "clean_ml_df['Predicted_Life_Expectancy'] = predicted_life_expectancy\n",
+    "\n",
+    "clean_ml_df[\"Life_Exp_Residual\"] = y - clean_ml_df['Predicted_Life_Expectancy']\n",
+    "\n",
+    "# checking countries with highest and lowest life expectancy residuals\n",
+    "clean_ml_df.sort_values(by=\"Life_Exp_Residual\", ascending=False).head(10)\n",
+    "clean_ml_df.sort_values(by=\"Life_Exp_Residual\", ascending=True).head(10)\n",
+    "\n",
+    "\n",
+    "# ranking countries based on average life expectancy residuals\n",
+    "print(clean_ml_df.groupby('Country')['Life_Exp_Residual'].mean().sort_values(ascending=False).head(5))\n",
+    "print(clean_ml_df.groupby('Country')['Life_Exp_Residual'].mean().sort_values(ascending=True).head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68a8f6a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
