Created KMeans clustering, used elbow method & silhouette score to detrmin clusters and created boxplots to create visualization

--- a/notebooks/01_data_collection.ipynb
+++ b/notebooks/01_data_collection.ipynb
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "774d2caf",
    "metadata": {},
    "outputs": [
@@ -2141,12 +2141,15 @@
     "print(peru_data[['Country', 'Life_Expectancy_Female', 'Life_Expectancy_Male']].head)\n",
     "\n",
     "\n",
-    "# Peru not really that efficient in terms of life expectancy, they are just not spending much money on healthcare"
+    "# Peru not really that efficient in terms of life expectancy, they are just not spending much money on healthcare\n",
+    "\n",
+    "# deleting the spending efficiency column for further analysis\n",
+    "clean_ml_df = clean_ml_df.drop(columns=['Spending_Efficiency'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "62ae4654",
    "metadata": {},
    "outputs": [
